<resources>
    <string name="app_name">Cheloc</string>
    <string name="Latitude">"Широта: "</string>
    <string name="Longitude">"Долгота: "</string>
    <string name="Altitude">"Высота: "</string>
    <string name="Bearing">"Угол: "</string>
    <string name="Speed">"Скорость: "</string>
    <string name="Satellites">"Спутников: "</string>
    <!--<string name="latitudePos">53.923269</string>-->
    <!--<string name="longtitudePos">27.596573</string>-->
    <!--<string name="altitudePos">203</string>-->
    <!--<string name="voteTextView">Выберите действие</string>-->
    <!--<string name="deleteLocationTextView">Удалить установленную локацию, если она существует?</string>-->
    <!--<string name="deleteLocationButton">Ок</string>-->
    <!--<string name="openDeleteLocationLinearLayout">Отмена положения</string>-->
    <!--<string name="textCurGpsLocation">Gps положение: </string>-->
    <!--<string name="textCurNtwrkLocation">Сетевое положение: </string>-->
    <!--<string name="consoleTextView">Консоль сообщений</string>-->
    <!--<string name="checkerGpsUpdatesButton">Start/StopChckGPSupd</string>-->
    <!--<string name="openLocationLinearLayoutButton">Задание положения</string>-->
    <string name="setLocationButton">Задать положение без обновлений</string>
    <string name="setLocationServiceButton">Задать положение с обновлениями</string>
    <string name="cancelSetLocationButton">Отмена</string>
    <!--<string name="buttonCancelProps">Отмена</string>-->
    <!--<string name="buttonSaveProps">Сохранить</string>-->
    <!--<string name="serviceRunTimeСheckBox">Время работы сервиса мин:</string>-->
    <!--<string name="updateTimePropСheckBox">Время обновления позиции, сек:</string>-->
    <!--<string name="movingPropСheckBox">Разброс местоположения коэфф.:</string>-->
    <!--<string name="setSpeedСheckBox">Установить скорость движения, км/ч:</string>-->
    <!--<string name="setDefaultPositionСheckBox">Установить местоположение умолчания:</string>-->
    <!--<string name="updateTimePropEditText">0.45</string>-->
    <string name="moveModeTextView">Режим перемещения, км/ч:</string>
    <string name="stayModeRadioButton">0</string>
    <string name="walkModeRadioButton">0-5</string>
    <string name="driveModeRadioButton">40-60</string>
    <string name="randomPositionCheckBox">Небольшое смещение</string>
    <string name="serviceStatusTextView">ХЗ вообще, что-то пошло не так ;(</string>
    <string name="not_chenged">not chenged!</string>
    <string name="stopMockLocationButton">Удалить установку положения</string>
    <string name="toSetPosButton">Установка положения...</string>
    <string name="textServiceStatusTextView">"Статус сервиса: "</string>
    <string name="networkLocationTextView">Положение сети:</string>
    <string name="gpsLocationTextView">Положение спутников:</string>
    <string name="noValue"> Нет данных.</string>
    <string name="serviceRun">"Сервис запущен. "</string>
    <string name="serviceStop">"Сервис не запущен. "</string>
    <string name="loadPosButton">download</string>
    <string name="savePosButton">upload</string>
    <string name="address">Адрес:</string>
    <string name="title_activity_bt">BtActivity</string>
</resources>
