<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/addressBlockLayout"
    android:background="@color/scrollBlockColor"
    android:layout_margin="15dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/addressBlockDataLayout">

        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal|italic"
            android:textAllCaps="false"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressLayout">

        </LinearLayout>

        <TextView
            android:text="@string/Latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/latitudeLayout" />

        <TextView
            android:text="@string/Longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/longtitudeLayout" />

        <TextView
            android:text="@string/Altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/altitudeLayout" />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addressBlockCheckBox"
        android:layout_weight="0"
        android:layout_gravity="center_vertical|center_horizontal" />

</LinearLayout>